Cambios de semantica

--- a/index.html
+++ b/index.html
@@ -34,17 +34,22 @@
 		 	<h2 class="titulo_item">
 		 		<a href="#">Título del artículo</a>
 		 	</h2>
-		 	<p clase="autor_item">
+		 	<div clase="autor_item">
 		 		Por<a href="#">Maika Gonzalez</a>
-		 	</p>
-		 	<p class="datos_item">
+		 	</div>
+		 	<div class="datos_item">
 		 		<a href="#" class="tag_item">Pony</a>
 		 		<span class="fecha_item">Hace <strong>5</strong> min
 		 		</span>
 		 		<a href="#" class="comentarios_item_item">3</a>
 		 		<a href="#" class="guardar_item"></a>
+		 	</div>
+		 	<div class="votacion">
+		 		<a href="#" class="up"></a>
+		 		696
+		 		<a href="#" class="down"></a>
 
-		 	</p>
+		 	</div>
 		</article>
 	</section>
 	<footer>
